consul/admin-partitions/backend-app.yaml
# Service to expose service-b-v1
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 9090
    targetPort: 9090
---
# service-b-v1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
        # "consul.hashicorp.com/transparent-proxy": "false"
        # "consul.hashicorp.com/connect-service-upstreams": "service-c-v1.default.tenant-2:9091"
    spec:
      serviceAccountName: backend
      containers:
      - name: backend
        image: nicholasjackson/fake-service:v0.25.1
        ports:
        - containerPort: 9090
