consul/admin-partitions/frontend.yaml
# Service to expose service-a
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type: LoadBalancer
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 9090
---
# service-a
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
        # "consul.hashicorp.com/transparent-proxy": "false"
        # "consul.hashicorp.com/connect-service-upstreams": "backend.default.default:9091,backend-v2.default.default:9092"
    spec:
      serviceAccountName: frontend
      containers:
      - name: frontend
        image: nicholasjackson/fake-service:v0.25.1
        ports:
        - containerPort: 9090
        # readinessProbe:
        #   httpGet:
        #     port: 9090
        #     path: /healthz
        #   periodSeconds: 5
